Added default locations for all slayer tasks